--- a/maps.html
+++ b/maps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Maps </title>
+	<title> Direction Map </title>
 	<!-- Meta -->
 	<meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
