--- a/venue.html
+++ b/venue.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title> Hotel Information </title>
+	<title> Hotel & Venue </title>
 	<!-- Meta -->
 	<meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,7 +69,7 @@
 <div class="header">
 <div class="row">
 	<div class="col-lg-12" style="padding:0px 0px 0px 30px">
-		<h2> <strong> Hotel Information </strong> </h2>
+		<h2> <strong> Hotel </strong> </h2>
 	</div>	
 </div> 
 <div class="row">
