--- a/info.html
+++ b/info.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" type="text/css" href="ripples.min.css">
 
     <!-- Javascript -->   
-	<script src="http://maps.googleapis.com/maps/api/js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -48,7 +47,7 @@
 		}
 /* Header Styling */
 	.header{
-		background-color:#3F51B5;
+		background-color:#e67e22;
 		color: white;
 		font-weight: bolder;
 		height: 40vh;
@@ -63,19 +62,62 @@
 	.card .card-content{
 		position: 0;
 	}
+	.navbar{
+	padding-top: 10px;
+    min-height: 70px;
+  }
+  	.navbar-defaults{
+  		background-color: #e67e22;
+  	}
+  
+  .footer{
+    height: 50px;
+    background-color:#e67e22;
+    color: white;
+    font-weight: lighter;
+    text-align: center;
+    padding-top: 10px;
+  }
 	</style>
 </head>
 <body>
 <div class="header">
+<!-- Navbar -->
+<div class="container-fluid">
+<div class="navbar navbar-defaults navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav text-center">
+        <li><a href="index.html"> Index </a></li>
+        <li><a href="#">Games</a></li>
+        <li class="active"><a href="info.html">Do & Don't</a></li>
+        <li><a href="venue.html">Hotel Information</a></li>
+        <li><a href="maps.html">Maps</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+</div>
+<!-- Navbar End Here -->
+<!-- Title -->
 <div class="row">
-	<div class="col-lg-12" style="padding:0px 0px 0px 30px">
-		<h1> <strong> Do & Don't </strong> </h1>
-	</div>	
-</div> 
+    <div class="col-lg-12" style="padding-top:60px; padding-left:40px;">
+      <h1> <strong> Do & Don't </strong> </h1>
+	</div>
+</div>
+<!-- Title Ends here -->
 <div class="row">
 	<div class="col-lg-12">
 		<div class="col-lg-6 col-lg-offset-3">
-			<div class="card" style="margin-top:5px; margin-bottom:10px;">
+			<div class="card" style="margin-top:5px; margin-bottom:90px;">
     			<div class="card-height-indicator"></div>
 			    <div class="card-content">
 			    	<h4 class="text-center"> In this page, you will learn what to do and what to don't do </h4>
@@ -98,6 +140,7 @@
 						      </ul>
 						    </div>
 						  </div>
+						  <br>
 						  <div class="panel panel-default">
 						    <div class="panel-heading">
 						      <h4 class="panel-title">
@@ -169,6 +212,9 @@
   </div>
 </div>
 <!-- Modal Ends -->
+<div class="footer">
+  <h5> Copyright 2016 WTM Event Management</h5>
+</div>
 </div>
 </body>
 </html>
