Re-coloring caption

--- a/homepage.html
+++ b/homepage.html
@@ -15,17 +15,17 @@
 	<!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-material-design.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-material-design.css">
     <link href="http://fezvrasta.github.io/snackbarjs/dist/snackbar.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/ripples.min.css">
+    <link rel="stylesheet" type="text/css" href="ripples.min.css">
 
     <!-- Javascript -->   
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script script="js/material.min.js"></script>
-    <script script="js/ripples.min.js"></script>
+    <script script="material.min.js"></script>
+    <script script="ripples.min.js"></script>
     
     <!-- Aditional -->
     <link rel="mask-icon" href="https://assets-cdn.github.com/pinned-octocat.svg" color="#4078c0">
@@ -65,9 +65,11 @@
 	.card .card-content{
 		position: 0;
 	}
+  
   .navbar{
     min-height: 70px;
   }
+  
   .footer{
     height: 50px;
     background-color:#009688;
@@ -111,7 +113,7 @@
   <div class="row">
     <div class="col-lg-12 text-center" >
       <h1 style="text-transform:uppercase; font-weight:bolder; font-size:37px;"> Danone CBS Digital Handbook </h1>
-      <p style="padding-bottom:5px"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      <p style="padding-bottom:5px; color:white;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. </p>
     </div>
   </div>
@@ -240,8 +242,5 @@
   <h5> Copyright 2016 WTM Event Management</h5>
 </div>
 <!-- Modal Ends -->
-	<!-- Javascript -->
-	<script src="js/material.min.js"></script>
-	<script src="js/ripples.min.js"></script>
 </body>
 </html>
