--- a/maps.html
+++ b/maps.html
@@ -31,7 +31,7 @@
     <link rel="mask-icon" href="https://assets-cdn.github.com/pinned-octocat.svg" color="#4078c0">
     <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 
-    <script>
+     <script>
     	function initialize() {
     		var mapProp = {
 		  center:new google.maps.LatLng(51.508742, -0.120850),
@@ -59,7 +59,7 @@
 		}
 /* Header Styling */
 	.header{
-		background-color:#16a085;
+		background-color:#3498db;
 		color: white;
 		font-weight: bolder;
 		height: 40vh;
@@ -89,15 +89,59 @@
         width: 100% !important;
         height: 100% !important;
     }
+
+    .navbar{
+	padding-top: 10px;
+    min-height: 70px;
+  }
+  	.navbar-defaults{
+  		background-color: #3498db;
+  	}
+  
+  .footer{
+    height: 50px;
+    background-color:#3498db;
+    color: white;
+    font-weight: lighter;
+    text-align: center;
+    padding-top: 10px;
+  }
 	</style>
 </head>
 <body>
 <div class="header">
+<!-- Navbar -->
+<div class="container-fluid">
+<div class="navbar navbar-defaults navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav text-center">
+        <li><a href="index.html"> Index </a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="info.html">Do & Don't</a></li>
+        <li><a href="venue.html">Hotel Information</a></li>
+        <li class="active"><a href="maps.html">Maps</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+</div>
+<!-- Navbar End Here -->
+<!-- Title -->
 <div class="row">
-	<div class="col-lg-12" style="padding:0px 0px 0px 30px">
-		<h1> <strong> Maps </strong> </h1>
-	</div>	
-</div> 
+    <div class="col-lg-12" style="padding-top:60px; padding-left:40px;">
+      <h1> <strong> Maps </strong> </h1>
+	</div>
+</div>
+<!-- Title Ends here -->
 <div class="row">
 	<div class="col-lg-12">
 		<div class="col-lg-6 col-lg-offset-3">
@@ -187,6 +231,9 @@
   </div>
 </div>
 <!-- Modal Ends -->
+<div class="footer">
+  <h5> Copyright 2016 WTM Event Management</h5>
+</div>
 </div>
 </body>
 </html>
