--- a/homepage.html
+++ b/homepage.html
@@ -85,162 +85,165 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-<div class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav text-center">
-        <li class="active"><a href="#"> Index </a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="info.html">Do & Don't</a></li>
-        <li><a href="venue.html">Hotel Information</a></li>
-        <li><a href="maps.html">Maps</a></li>
-      </ul>
+  <div class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav text-center">
+          <li class="active"><a href="#"> Index </a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="info.html">Do & Don't</a></li>
+          <li><a href="venue.html">Hotel Information</a></li>
+          <li><a href="maps.html">Maps</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
 <div class="container-fluid" style="padding:50px">
   <div class="row">
-    <div class="col-lg-12 text-center" >
-      <h1 style="text-transform:uppercase; font-weight:bolder; font-size:37px;"> Danone CBS Digital Handbook </h1>
-      <p style="padding-bottom:5px; color:white;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. </p>
+      <div class="col-lg-12 text-center" >
+        <h1 style="text-transform:uppercase; font-weight:bolder; font-size:37px;"> Danone CBS Digital Handbook </h1>
+        <p style="padding-bottom:5px; color:white;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. </p>
+      </div>
+    </div>  
+</div>
+<!-- Title ends Here -->
+<!-- Card Grid Start here -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+    <!-- Card Start here -->
+      <div class="col-lg-6 col-lg-offset-3">
+        <div class="card" style="margin-top:5px; margin-bottom:10px;">
+            <div class="card-height-indicator"></div>
+            <div class="card-content">
+                <div class="card-body">
+                  <img class="img-responsive" src="pics.jpg" alt="hotel">
+                  <h3> Maps </h3>
+                  <hr/>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                </div>
+                <footer class="card-footer" style="margin-left:15px;">
+                  <a href="maps.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
+              </footer>
+            </div>
+        </div>
+      </div>
+      <!-- Card Ends here -->
+      <!-- Card Start here -->
+      <div class="col-lg-6 col-lg-offset-3">
+        <div class="card" style="margin-top:5px; margin-bottom:10px;">
+            <div class="card-height-indicator"></div>
+            <div class="card-content">
+                <div class="card-body">
+                  <img class="img-responsive" src="pics.jpg" alt="hotel">
+                  <h3> Hotel Information </h3>
+                  <hr/>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                </div>
+                <footer class="card-footer" style="margin-left:15px;">
+                  <a href="venue.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
+              </footer>
+            </div>
+        </div>
+      </div>
+      <!-- Card Ends here -->
+      <!-- Card Start here -->
+      <div class="col-lg-6 col-lg-offset-3">
+        <div class="card" style="margin-top:5px; margin-bottom:10px;">
+            <div class="card-height-indicator"></div>
+            <div class="card-content">
+                <div class="card-body">
+                  <img class="img-responsive" src="pics.jpg" alt="hotel">
+                  <h3> Participant List </h3>
+                  <hr/>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                </div>
+                <footer class="card-footer" style="margin-left:15px;">
+                  <a href="#" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
+              </footer>
+            </div>
+        </div>
+      </div>
+      <!-- Card Ends here -->
+      <!-- Card Start here -->
+      <div class="col-lg-6 col-lg-offset-3">
+        <div class="card" style="margin-top:5px; margin-bottom:10px;">
+            <div class="card-height-indicator"></div>
+            <div class="card-content">
+                <div class="card-body">
+                  <img class="img-responsive" src="pics.jpg" alt="hotel">
+                  <h3> Do & Don't Guides </h3>
+                  <hr/>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                </div>
+                <footer class="card-footer" style="margin-left:15px;">
+                  <a href="info.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
+              </footer>
+            </div>
+        </div>
+      </div>
+      <!-- Card Ends here -->
+      <div class="text-center">
+          <button class="btn btn-raised btn-danger" data-toggle="modal" data-target="#myModals"> Emergency Contact List </button>
+        </div>
+      <div class="col-lg-4"></div>
     </div>
   </div>
-</div>
-</div>
-<!-- Title Ends here -->
-<div class="row">
-  <div class="col-lg-12">
-  <!-- Card Start here -->
-    <div class="col-lg-6 col-lg-offset-3">
-      <div class="card" style="margin-top:5px; margin-bottom:10px;">
-          <div class="card-height-indicator"></div>
-          <div class="card-content">
-              <div class="card-body">
-                <img class="img-responsive" src="pics.jpg" alt="hotel">
-                <h3> Maps </h3>
-                <hr/>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-              </div>
-              <footer class="card-footer" style="margin-left:15px;">
-                <a href="maps.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
-            </footer>
-          </div>
-      </div>
-    </div>
-    <!-- Card Ends here -->
-    <!-- Card Start here -->
-    <div class="col-lg-6 col-lg-offset-3">
-      <div class="card" style="margin-top:5px; margin-bottom:10px;">
-          <div class="card-height-indicator"></div>
-          <div class="card-content">
-              <div class="card-body">
-                <img class="img-responsive" src="pics.jpg" alt="hotel">
-                <h3> Hotel Information </h3>
-                <hr/>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-              </div>
-              <footer class="card-footer" style="margin-left:15px;">
-                <a href="venue.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
-            </footer>
-          </div>
-      </div>
-    </div>
-    <!-- Card Ends here -->
-    <!-- Card Start here -->
-    <div class="col-lg-6 col-lg-offset-3">
-      <div class="card" style="margin-top:5px; margin-bottom:10px;">
-          <div class="card-height-indicator"></div>
-          <div class="card-content">
-              <div class="card-body">
-                <img class="img-responsive" src="pics.jpg" alt="hotel">
-                <h3> Participant List </h3>
-                <hr/>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-              </div>
-              <footer class="card-footer" style="margin-left:15px;">
-                <a href="#" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
-            </footer>
-          </div>
-      </div>
-    </div>
-    <!-- Card Ends here -->
-    <!-- Card Start here -->
-    <div class="col-lg-6 col-lg-offset-3">
-      <div class="card" style="margin-top:5px; margin-bottom:10px;">
-          <div class="card-height-indicator"></div>
-          <div class="card-content">
-              <div class="card-body">
-                <img class="img-responsive" src="pics.jpg" alt="hotel">
-                <h3> Do & Don't Guides </h3>
-                <hr/>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-              </div>
-              <footer class="card-footer" style="margin-left:15px;">
-                <a href="info.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
-            </footer>
-          </div>
-      </div>
-    </div>
-    <!-- Card Ends here -->
-    <div class="text-center">
-        <button class="btn btn-raised btn-danger" data-toggle="modal" data-target="#myModals"> Emergency Contact List </button>
-      </div>
-    <div class="col-lg-4"></div>
-  </div>
-</div>
-<!-- Modal -->
+</div> 
+
+<!-- Modal Start here -->
 <div id="myModals" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title" style="color:black;"> <strong> Emergency Contact </strong> </h4>
-      </div>
-      <div class="modal-body">
-        <p> Click his/her number to call.</p>
-       <div class="table-responsive">
-        <table class="table table-bordered text-center" style="color:black;">
-          <thead>
-            <tr>
-              <th class="text-center"> Name </th>
-              <th class="text-center"> Number </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td> Jhon Doe </td>
-              <td> <a href="tel:+627171717"> +627171717 </a> </td>
-            </tr>
-            <tr>
-              <td> Marry Doe </td>
-              <td> <a href="tel:+627171715"> +627171715 </a> </td>
-            </tr>
-          </tbody>  
-        </table>
-       </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title" style="color:black;"> <strong> Emergency Contact </strong> </h4>
+        </div>
+        <div class="modal-body">
+          <p> Click his/her number to call.</p>
+         <div class="table-responsive">
+          <table class="table table-bordered text-center" style="color:black;">
+            <thead>
+              <tr>
+                <th class="text-center"> Name </th>
+                <th class="text-center"> Number </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> Jhon Doe </td>
+                <td> <a href="tel:+627171717"> +627171717 </a> </td>
+              </tr>
+              <tr>
+                <td> Marry Doe </td>
+                <td> <a href="tel:+627171715"> +627171715 </a> </td>
+              </tr>
+            </tbody>  
+          </table>
+         </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
-  </div>
 </div>
+<!-- Modal Ends Here -->
 <div class="footer">
   <h5> Copyright 2016 WTM Event Management</h5>
 </div>
-<!-- Modal Ends -->
 </body>
 </html>
