--- a/info.html
+++ b/info.html
@@ -31,6 +31,11 @@
     <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 
 <style type="text/css">
+html, body. div{
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 100%;
+}
 		body{
 			height: 100%;
 			width: 100%;
@@ -84,137 +89,138 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-<div class="navbar navbar-defaults navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav text-center">
-        <li><a href="index.html"> Index </a></li>
-        <li><a href="#">Games</a></li>
-        <li class="active"><a href="info.html">Do & Don't</a></li>
-        <li><a href="venue.html">Hotel Information</a></li>
-        <li><a href="maps.html">Maps</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+	<div class="navbar navbar-defaults navbar-fixed-top">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Brand</a>
+	    </div>
+	    <div class="navbar-collapse collapse navbar-responsive-collapse">
+	      <ul class="nav navbar-nav text-center">
+	        <li><a href="index.html"> Index </a></li>
+	        <li><a href="#">Games</a></li>
+	        <li class="active"><a href="info.html">Do & Don't</a></li>
+	        <li><a href="venue.html">Hotel Information</a></li>
+	        <li><a href="maps.html">Maps</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</div>
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
-<div class="row">
-    <div class="col-lg-12" style="padding-top:60px; padding-left:40px;">
-      <h1> <strong> Do & Don't </strong> </h1>
+<div class="container-fluid">
+	<div class="row">
+	    <div class="col-lg-12" style="padding-top:60px; padding-left:30px;">
+	      <h1> <strong> Do & Don't </strong> </h1>
+		</div>
 	</div>
 </div>
 <!-- Title Ends here -->
-<div class="row">
-	<div class="col-lg-12">
-		<div class="col-lg-6 col-lg-offset-3">
-			<div class="card" style="margin-top:5px; margin-bottom:90px;">
-    			<div class="card-height-indicator"></div>
-			    <div class="card-content">
-			    	<h4 class="text-center"> In this page, you will learn what to do and what to don't do </h4>
-			        <div class="card-body text-center">
-						<div class="panel-group">
-						  <div class="panel panel-default">
-						    <div class="panel-heading">
-						      <h4 class="panel-title">
-						        <a data-toggle="collapse" href="#collapse1"> Please do the following things </a>
-						      </h4>
-						    </div>
-						    <div id="collapse1" class="panel-collapse collapse">
-						      <ul class="list-group">
-						        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						        tempor incididunt ut labore et dolore magna aliqua.</li>
-						        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						        tempor incididunt ut labore et dolore magna aliqua. </li>
-						        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						        tempor incididunt ut labore et dolore magna aliqua. </li>
-						      </ul>
-						    </div>
-						  </div>
-						  <br>
-						  <div class="panel panel-default">
-						    <div class="panel-heading">
-						      <h4 class="panel-title">
-						        <a data-toggle="collapse" href="#collapse2"> Please avoid the following things </a>
-						      </h4>
-						    </div>
-						    <div id="collapse2" class="panel-collapse collapse">
-						      <ul class="list-group">
-						        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						        tempor incididunt ut labore et dolore magna aliqua.</li>
-						        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						        tempor incididunt ut labore et dolore magna aliqua. </li>
-						        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						        tempor incididunt ut labore et dolore magna aliqua. </li>
-						      </ul>
-						    </div>
-						  </div>
-						</div>
-			        </div>
-			        <!--
-			        <footer class="card-footer" style="margin-left:15px;">
-			        	<a href="http://www.novotelbogor.com/" class="btn btn-raised btn-primary" role="button"> Learn more </a>				        
-				    </footer> -->
-			    </div>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="col-lg-6 col-lg-offset-3">
+				<div class="card" style="margin-top:5px; margin-bottom:90px;">
+	    			<div class="card-height-indicator"></div>
+				    <div class="card-content">
+				    	<h4 class="text-center"> In this page, you will learn what to do and what to don't do </h4>
+				        <div class="card-body text-center">
+							<div class="panel-group">
+							  <div class="panel panel-default">
+							    <div class="panel-heading">
+							      <h4 class="panel-title">
+							        <a data-toggle="collapse" href="#collapse1"> Please do the following things </a>
+							      </h4>
+							    </div>
+							    <div id="collapse1" class="panel-collapse collapse">
+							      <ul class="list-group">
+							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua.</li>
+							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua. </li>
+							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua. </li>
+							      </ul>
+							    </div>
+							  </div>
+							  <br>
+							  <div class="panel panel-default">
+							    <div class="panel-heading">
+							      <h4 class="panel-title">
+							        <a data-toggle="collapse" href="#collapse2"> Please avoid the following things </a>
+							      </h4>
+							    </div>
+							    <div id="collapse2" class="panel-collapse collapse">
+							      <ul class="list-group">
+							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua.</li>
+							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua. </li>
+							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua. </li>
+							      </ul>
+							    </div>
+							  </div>
+							</div>
+				        </div>
+				    </div>
+				</div>
+				<div class="text-center">
+					<button class="btn btn-raised btn-danger" data-toggle="modal" data-target="#myModals"> Emergency Contact List </button>
+				</div>
 			</div>
-			<div class="text-center">
-				<button class="btn btn-raised btn-danger" data-toggle="modal" data-target="#myModals"> Emergency Contact List </button>
-			</div>
+			<div class="col-lg-4"></div>
 		</div>
-		<div class="col-lg-4"></div>
 	</div>
 </div>
 <!-- Modal -->
-<div id="myModals" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title" style="color:black;"> <strong> Emergency Contact </strong> </h4>
-      </div>
-      <div class="modal-body">
-      	<p> Click his/her number to call.</p>
-       <div class="table-responsive">
-       	<table class="table table-bordered text-center" style="color:black;">
-       		<thead>
-	       		<tr>
-	       			<th class="text-center"> Name </th>
-	       			<th class="text-center"> Number </th>
-	       		</tr>
-       		</thead>
-       		<tbody>
-       			<tr>
-       				<td> Jhon Doe </td>
-       				<td> <a href="tel:+627171717"> +627171717 </a> </td>
-       			</tr>
-       			<tr>
-       				<td> Marry Doe </td>
-       				<td> <a href="tel:+627171715"> +627171715 </a> </td>
-       			</tr>
-       		</tbody>  
-       	</table>
-       </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+<div class="container-fluid">
+	<div id="myModals" class="modal fade" role="dialog">
+	  <div class="modal-dialog">
+	    <!-- Modal content-->
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal">&times;</button>
+	        <h4 class="modal-title" style="color:black;"> <strong> Emergency Contact </strong> </h4>
+	      </div>
+	      <div class="modal-body">
+	      	<p> Click his/her number to call.</p>
+	       <div class="table-responsive">
+	       	<table class="table table-bordered text-center" style="color:black;">
+	       		<thead>
+		       		<tr>
+		       			<th class="text-center"> Name </th>
+		       			<th class="text-center"> Number </th>
+		       		</tr>
+	       		</thead>
+	       		<tbody>
+	       			<tr>
+	       				<td> Jhon Doe </td>
+	       				<td> <a href="tel:+627171717"> +627171717 </a> </td>
+	       			</tr>
+	       			<tr>
+	       				<td> Marry Doe </td>
+	       				<td> <a href="tel:+627171715"> +627171715 </a> </td>
+	       			</tr>
+	       		</tbody>  
+	       	</table>
+	       </div>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 <!-- Modal Ends -->
-<div class="footer">
-  <h5> Copyright 2016 WTM Event Management</h5>
-</div>
+	<div class="footer">
+	  <h5> Copyright 2016 WTM Event Management</h5>
+	</div>
 </div>
 </body>
 </html>
