--- a/maps.html
+++ b/maps.html
@@ -104,6 +104,7 @@
     color: white;
     font-weight: lighter;
     text-align: center;
+    margin-top: 55px;
     padding-top: 10px;
   }
 	</style>
@@ -112,60 +113,63 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-<div class="navbar navbar-defaults navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav text-center">
-        <li><a href="index.html"> Index </a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="info.html">Do & Don't</a></li>
-        <li><a href="venue.html">Hotel Information</a></li>
-        <li class="active"><a href="maps.html">Maps</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+	<div class="navbar navbar-defaults navbar-fixed-top">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Brand</a>
+	    </div>
+	    <div class="navbar-collapse collapse navbar-responsive-collapse">
+	      <ul class="nav navbar-nav text-center">
+	        <li><a href="index.html"> Index </a></li>
+	        <li><a href="#">Games</a></li>
+	        <li><a href="info.html">Do & Don't</a></li>
+	        <li><a href="venue.html">Hotel Information</a></li>
+	        <li class="active"><a href="maps.html">Maps</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</div>
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
-<div class="row">
-    <div class="col-lg-12" style="padding-top:60px; padding-left:40px;">
-      <h1> <strong> Maps </strong> </h1>
+<div class="container-fluid">
+	<div class="row">
+	    <div class="col-lg-12" style="padding-top:60px; padding-left:30px;">
+	      <h1> <strong> Maps </strong> </h1>
+		</div>
 	</div>
 </div>
 <!-- Title Ends here -->
-<div class="row">
-	<div class="col-lg-12">
-		<div class="col-lg-6 col-lg-offset-3">
-			<div class="card" style="margin-top:5px; margin-bottom:10px;">
-    			<div class="card-height-indicator"></div>
-			    <div class="card-content">
-			        <div class="card-body">
-						<div class="google-maps">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d253748.20936869888!2d106.71708672884075!3d-6.417712677431908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x2e69f96ef78ef8bf%3A0x5f977fd63b4489a3!2sCyber+2+Tower%2C+Jalan+Mesjid+Darul+Muqorrobin+No.+41%2C+Kuningan+Timur%2C+Setiabudi%2C+Jakarta+Selatan%2C+Daerah+Khusus+Ibukota+Jakarta+12950!3m2!1d-6.2264086!2d106.83233489999999!4m5!1s0x2e69c66c000aaa3d%3A0xf01576df7f835a0!2sNovotel+Bogor+Resort%2C+Bogor%2C+Jawa+Barat!3m2!1d-6.6039379!2d106.8385912!5e0!3m2!1sid!2sid!4v1472106939115" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-						</div>
-			        </div>
-			        <footer class="card-footer" style="margin-left:15px;">
-				        <button class="btn btn-raised btn-info" data-toggle="modal" data-target="#myModal"> Location Helper </button>
-				    </footer>
-			    </div>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="col-lg-6 col-lg-offset-3">
+				<div class="card" style="margin-top:5px; margin-bottom:10px;">
+	    			<div class="card-height-indicator"></div>
+				    <div class="card-content">
+				        <div class="card-body">
+							<div class="google-maps">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d253748.20936869888!2d106.71708672884075!3d-6.417712677431908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x2e69f96ef78ef8bf%3A0x5f977fd63b4489a3!2sCyber+2+Tower%2C+Jalan+Mesjid+Darul+Muqorrobin+No.+41%2C+Kuningan+Timur%2C+Setiabudi%2C+Jakarta+Selatan%2C+Daerah+Khusus+Ibukota+Jakarta+12950!3m2!1d-6.2264086!2d106.83233489999999!4m5!1s0x2e69c66c000aaa3d%3A0xf01576df7f835a0!2sNovotel+Bogor+Resort%2C+Bogor%2C+Jawa+Barat!3m2!1d-6.6039379!2d106.8385912!5e0!3m2!1sid!2sid!4v1472106939115" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+							</div>
+				        </div>
+				        <footer class="card-footer" style="margin-left:15px;">
+					        <button class="btn btn-raised btn-info" data-toggle="modal" data-target="#myModal"> Location Helper </button>
+					    </footer>
+				    </div>
+				</div>
+				<div class="text-center">
+					<button class="btn btn-raised btn-danger" data-toggle="modal" data-target="#myModals"> Emergency Contact List </button>
+				</div>
 			</div>
-			<div class="text-center">
-				<button class="btn btn-raised btn-danger" data-toggle="modal" data-target="#myModals"> Emergency Contact List </button>
-			</div>
+			<div class="col-lg-4"></div>
 		</div>
-		<div class="col-lg-4"></div>
 	</div>
 </div>
-
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
@@ -231,9 +235,9 @@
   </div>
 </div>
 <!-- Modal Ends -->
-<div class="footer">
-  <h5> Copyright 2016 WTM Event Management</h5>
-</div>
+	<div class="footer">
+	  <h5> Copyright 2016 WTM Event Management</h5>
+	</div>
 </div>
 </body>
 </html>
