--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
 	}
   
   .navbar{
-    min-height: 70px;
+  padding-top: 10px;
+  min-height: 70px;
   }
   
+  .navbar-defaults{
+      background-color: #009688;
+    }
+
   .footer{
     height: 50px;
     background-color:#009688;
@@ -85,7 +90,7 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-  <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-defaults navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -97,11 +102,11 @@
       </div>
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav text-center">
-          <li class="active"><a href="#"> Index </a></li>
-          <li><a href="#">Games</a></li>
+          <li class="active"><a href="index.html"> Index </a></li>
+          <li><a href="participant.html">Participant List</a></li>
+          <li><a href="maps.html">Maps</a></li>
           <li><a href="info.html">Do & Don't</a></li>
           <li><a href="venue.html">Hotel Information</a></li>
-          <li><a href="maps.html">Maps</a></li>
         </ul>
       </div>
     </div>
@@ -109,7 +114,7 @@
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
-<div class="container-fluid" style="padding:50px">
+<div class="container-fluid" style="padding:50px 0px 10px 0px;">
   <div class="row">
       <div class="col-lg-12 text-center" >
         <h1 style="text-transform:uppercase; font-weight:bolder; font-size:37px;"> Danone CBS Digital Handbook </h1>
