Refixing navigation bar + putt the footer outside of the header tag

--- a/info.html
+++ b/info.html
@@ -102,10 +102,10 @@ html, body. div{
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	      <ul class="nav navbar-nav text-center">
 	        <li><a href="index.html"> Index </a></li>
-	        <li><a href="#">Games</a></li>
+	        <li><a href="participant.html">Participant List</a></li>
+	        <li><a href="maps.html">Maps</a></li>
 	        <li class="active"><a href="info.html">Do & Don't</a></li>
 	        <li><a href="venue.html">Hotel Information</a></li>
-	        <li><a href="maps.html">Maps</a></li>
 	      </ul>
 	    </div>
 	  </div>
@@ -218,9 +218,9 @@ html, body. div{
 	  </div>
 	</div>
 <!-- Modal Ends -->
-	<div class="footer">
+</div>
+<div class="footer">
 	  <h5> Copyright 2016 WTM Event Management</h5>
 	</div>
-</div>
 </body>
 </html>
