Fixing navigation bar

--- a/maps.html
+++ b/maps.html
@@ -126,10 +126,10 @@
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	      <ul class="nav navbar-nav text-center">
 	        <li><a href="index.html"> Index </a></li>
-	        <li><a href="#">Games</a></li>
+	        <li><a href="participant.html">Participant List</a></li>
+	        <li class="active"><a href="maps.html">Maps</a></li>
 	        <li><a href="info.html">Do & Don't</a></li>
 	        <li><a href="venue.html">Hotel Information</a></li>
-	        <li class="active"><a href="maps.html">Maps</a></li>
 	      </ul>
 	    </div>
 	  </div>
