--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 	<!DOCTYPE html>
 <html>
 <head>
@@ -67,14 +68,9 @@
 	}
   
   .navbar{
-  padding-top: 10px;
-  min-height: 70px;
+    min-height: 70px;
   }
   
-  .navbar-defaults{
-      background-color: #009688;
-    }
-
   .footer{
     height: 50px;
     background-color:#009688;
@@ -90,7 +86,7 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-  <div class="navbar navbar-defaults navbar-fixed-top">
+  <div class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -103,6 +99,7 @@
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav text-center">
           <li class="active"><a href="index.html"> Index </a></li>
+          <li><a href="agenda.html"> Agenda </a></li>
           <li><a href="participant.html">Participant List</a></li>
           <li><a href="maps.html">Maps</a></li>
           <li><a href="info.html">Do & Don't</a></li>
@@ -114,12 +111,13 @@
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
-<div class="container-fluid" style="padding:50px 0px 10px 0px;">
+<div class="container-fluid" style="padding:50px">
   <div class="row">
       <div class="col-lg-12 text-center" >
         <h1 style="text-transform:uppercase; font-weight:bolder; font-size:37px;"> Danone CBS Digital Handbook </h1>
-        <p style="padding-bottom:5px; color:white;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. </p>
+        <button class="btn btn-raised btn-info btn-md" data-toggle="modal" data-target="#about"> About danone cbs </button>
+        <!--<p style="padding-bottom:5px; color:white;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. </p>-->
       </div>
     </div>  
 </div>
@@ -128,6 +126,24 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
+    <!-- Card Start here -->
+      <div class="col-lg-6 col-lg-offset-3">
+        <div class="card" style="margin-top:5px; margin-bottom:10px;">
+            <div class="card-height-indicator"></div>
+            <div class="card-content">
+                <div class="card-body">
+                  <img class="img-responsive" src="pics.jpg" alt="hotel">
+                  <h3> Agenda </h3>
+                  <hr/>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                </div>
+                <footer class="card-footer" style="margin-left:15px;">
+                  <a href="agenda.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
+              </footer>
+            </div>
+        </div>
+      </div>
+      <!-- Card Ends here -->
     <!-- Card Start here -->
       <div class="col-lg-6 col-lg-offset-3">
         <div class="card" style="margin-top:5px; margin-bottom:10px;">
@@ -176,7 +192,7 @@
                   <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                 </div>
                 <footer class="card-footer" style="margin-left:15px;">
-                  <a href="#" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
+                  <a href="participant.html" class="btn btn-raised btn-primary" role="button"> Learn more </a>                
               </footer>
             </div>
         </div>
@@ -239,6 +255,32 @@
             </tbody>  
           </table>
          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+</div>
+<!-- Modal Ends Here -->
+<!-- Modal Start here -->
+<div id="about" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title" style="color:black;"> <strong> About Danone CBS </strong> </h4>
+        </div>
+        <div class="modal-body">
+        <img class="img-responsive" src="pics.jpg" alt="hotel">
+        <hr>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>        
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
