--- a/info.html
+++ b/info.html
@@ -81,7 +81,8 @@ html, body. div{
     color: white;
     font-weight: lighter;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 8px;
+    margin-top:120px;
   }
 	</style>
 </head>
@@ -89,27 +90,28 @@ html, body. div{
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-	<div class="navbar navbar-defaults navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
-	    <div class="navbar-collapse collapse navbar-responsive-collapse">
-	      <ul class="nav navbar-nav text-center">
-	        <li><a href="index.html"> Index </a></li>
-	        <li><a href="participant.html">Participant List</a></li>
-	        <li><a href="maps.html">Maps</a></li>
-	        <li class="active"><a href="info.html">Do & Don't</a></li>
-	        <li><a href="venue.html">Hotel Information</a></li>
-	      </ul>
-	    </div>
-	  </div>
-	</div>
+  <div class="navbar navbar-defaults navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav text-center">
+          <li><a href="index.html"> Index </a></li>
+          <li><a href="agenda.html"> Agenda </a></li>
+          <li><a href="participant.html">Participant List</a></li>
+          <li><a href="maps.html">Maps</a></li>
+          <li class="active"><a href="info.html">Do & Don't</a></li>
+          <li><a href="venue.html">Hotel Information</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
@@ -128,23 +130,26 @@ html, body. div{
 				<div class="card" style="margin-top:5px; margin-bottom:90px;">
 	    			<div class="card-height-indicator"></div>
 				    <div class="card-content">
-				    	<h4 class="text-center"> In this page, you will learn what to do and what to don't do </h4>
+				    	<h5 class="text-center">  See our rules to help you to avoid having accidents </h5>
 				        <div class="card-body text-center">
 							<div class="panel-group">
 							  <div class="panel panel-default">
 							    <div class="panel-heading">
 							      <h4 class="panel-title">
-							        <a data-toggle="collapse" href="#collapse1"> Please do the following things </a>
+							        <a data-toggle="collapse" href="#collapse1"> Do the following things below </a>
 							      </h4>
 							    </div>
 							    <div id="collapse1" class="panel-collapse collapse">
 							      <ul class="list-group">
-							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							        tempor incididunt ut labore et dolore magna aliqua.</li>
-							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							        tempor incididunt ut labore et dolore magna aliqua. </li>
-							        <li class="list-group-item"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							        tempor incididunt ut labore et dolore magna aliqua. </li>
+							        <li class="list-group-item"> 
+							        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							        tempor incididunt ut labore et dolore magna aliqua. </p>
+							        </li>
+							        <li class="list-group-item"> Ut enim ad minim veniam,
+							        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							        consequat. </li>
+							        <li class="list-group-item"> Excepteur sint occaecat cupidatat non
+							        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </li>
 							      </ul>
 							    </div>
 							  </div>
@@ -220,7 +225,7 @@ html, body. div{
 <!-- Modal Ends -->
 </div>
 <div class="footer">
-	  <h5> Copyright 2016 WTM Event Management</h5>
+	  <h5> Copyright Content</h5>
 	</div>
 </body>
 </html>
