navbar  menu fixed

--- a/maps.html
+++ b/maps.html
@@ -113,27 +113,28 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-	<div class="navbar navbar-defaults navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
-	    <div class="navbar-collapse collapse navbar-responsive-collapse">
-	      <ul class="nav navbar-nav text-center">
-	        <li><a href="index.html"> Index </a></li>
-	        <li><a href="participant.html">Participant List</a></li>
-	        <li class="active"><a href="maps.html">Maps</a></li>
-	        <li><a href="info.html">Do & Don't</a></li>
-	        <li><a href="venue.html">Hotel Information</a></li>
-	      </ul>
-	    </div>
-	  </div>
-	</div>
+  <div class="navbar navbar-defaults navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav text-center">
+          <li><a href="index.html"> Index </a></li>
+          <li><a href="agenda.html"> Agenda </a></li>
+          <li><a href="participant.html">Participant List</a></li>
+          <li class="active"><a href="maps.html">Maps</a></li>
+          <li><a href="info.html">Do & Don't</a></li>
+          <li><a href="venue.html">Hotel Information</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
