--- a/participant.html
+++ b/participant.html
@@ -1,7 +1,7 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title> Hotel Information </title>
+	<title> Participant List </title>
 	<!-- Meta -->
 	<meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,27 +86,28 @@
 <div class="header">
 <!-- Navbar -->
 <div class="container-fluid">
-	<div class="navbar navbar-defaults navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
-	    <div class="navbar-collapse collapse navbar-responsive-collapse">
-	      <ul class="nav navbar-nav text-center">
-	        <li><a href="index.html"> Index </a></li>
-	        <li class="active"><a href="participant.html">Participant List</a></li>
-	        <li><a href="maps.html">Maps</a></li>
-	        <li><a href="info.html">Do & Don't</a></li>
-	        <li><a href="venue.html">Hotel Information</a></li>
-	      </ul>
-	    </div>
-	  </div>
-	</div>
+  <div class="navbar navbar-defaults navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav text-center">
+          <li><a href="index.html"> Index </a></li>
+          <li><a href="agenda.html"> Agenda </a></li>
+          <li class="active"><a href="participant.html">Participant List</a></li>
+          <li><a href="maps.html">Maps</a></li>
+          <li><a href="info.html">Do & Don't</a></li>
+          <li><a href="venue.html">Hotel Information</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Navbar End Here -->
 <!-- Title -->
@@ -136,6 +137,26 @@
 							      	</tr>
 							    </thead>
     							<tbody>
+							      	<tr>
+								        <td>John</td>
+								        <td>Doe</td>
+								        <td>john@example.com</td>
+							      	</tr>
+							      	<tr>
+								        <td>John</td>
+								        <td>Doe</td>
+								        <td>john@example.com</td>
+							      	</tr>
+							      	<tr>
+								        <td>John</td>
+								        <td>Doe</td>
+								        <td>john@example.com</td>
+							      	</tr>
+							      	<tr>
+								        <td>John</td>
+								        <td>Doe</td>
+								        <td>john@example.com</td>
+							      	</tr>
 							      	<tr>
 								        <td>John</td>
 								        <td>Doe</td>
