--- a/agenda.html
+++ b/agenda.html
@@ -44,7 +44,7 @@
 	       }
 	 /* Header Styling */
 	   .header{
-	       background-color: #03a9f4;
+	       background-color: #006064;
 	       color: white;
 	       font-weight: bolder;
 	       height: 40vh;
@@ -65,12 +65,12 @@
 	   min-height: 70px;
 	 }
 	   .navbar-defaults{
-	       background-color:  #03a9f4;
+	       background-color:  #006064;
 	   }
 
 	 .footer{
 	   height: 50px;
-	   background-color: #03a9f4;
+	   background-color: #006064;
 	   color: white;
 	   font-weight: lighter;
 	   text-align: center;
