--- a/info.html
+++ b/info.html
@@ -52,7 +52,7 @@ html, body. div{
 		}
 /* Header Styling */
 	.header{
-		background-color:#e67e22;
+		background-color:#ef6c00;
 		color: white;
 		font-weight: bolder;
 		height: 40vh;
@@ -72,12 +72,12 @@ html, body. div{
     min-height: 70px;
   }
   	.navbar-defaults{
-  		background-color: #e67e22;
+  		background-color: #ef6c00;
   	}
   
   .footer{
     height: 50px;
-    background-color:#e67e22;
+    background-color:#ef6c00;
     color: white;
     font-weight: lighter;
     text-align: center;
